# IQA-PyTorch

./: pyproject.toml  requirements.txt
pyiqa/: version_generate.py
